--- a/source/template/common/_features.pug
+++ b/source/template/common/_features.pug
@@ -19,5 +19,5 @@ section.features
         h4.feature__title База
         p.feature__text Квалифицированные специалисты и оборудованная лаборатория
 
-    button.btn.btn--transparent(type="button") Перейти на наш сайт
+    button.btn.btn--transparent.hvr-grow(type="button") Перейти на наш сайт
 
