--- a/source/template/common/_form.pug
+++ b/source/template/common/_form.pug
@@ -7,10 +7,10 @@ section.form
     form.form-application
       .form-application__group
         label.form-application__label
-          input.form-application__input(type="text" name="name" placeholder="Ваше имя*")
+          input.form-application__input(type="text" name="name" placeholder="Ваше имя*" required)
         label.form-application__label
-          input.form-application__input(type="tel" name="phone" placeholder="Ваш телефон*")
+          input.form-application__input(type="tel" name="phone" placeholder="Ваш телефон*" required)
         label.form-application__label
-          input.form-application__input(type="email" name="email" placeholder="Ваш E-mail*")
-      button.btn.btn--transparent(type="submit") Оставить заявку
+          input.form-application__input(type="email" name="email" placeholder="Ваш E-mail*" required)
+      button.btn.btn--transparent.hvr-grow(type="submit") Оставить заявку
 
